add reservation business rules and starting dockerfile config

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 TYPE=mysql
-HOST=127.0.0.1
-PORT=3306
-USER=test
-PASSWORD=test
-DATABASE=test
+HOST=containers-us-west-190.railway.app
+PORT=8062
+USER=root
+PASSWORD=7rwEffKFEFVljHANbrMC
+DATABASE=railway
