--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "@nestjs/typeorm": "^9.0.1",
     "bcrypt": "^5.1.0",
     "class-validator": "^0.13.2",
+    "date-fns": "^2.29.3",
+    "date-fns-tz": "^1.3.7",
     "mysql2": "^2.3.3",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
