docker file and env adjustments

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 TYPE=mysql
-HOST=containers-us-west-190.railway.app
-PORT=8062
-USER=root
-PASSWORD=7rwEffKFEFVljHANbrMC
-DATABASE=railway
+MYSQL_HOST=containers-us-west-190.railway.app
+MYSQL_PORT=8062
+MYSQL_USER=root
+MYSQL_PASSWORD=7rwEffKFEFVljHANbrMC
+MYSQL_DATABASE=railway
